src/main/WebApp/landing/platform.ou.edu/css/ou-style.css
/* ... */
#mast {
	background-image: url(../images/janux_feature.png);
	background-repeat: repeat;
	padding: 0px;
}
#mast-text h3 {
	text-align: center;
	font-size: 18px;
	color: #fff;
	font-family: Open Sans;
	font-weight: 100;
	text-transform: uppercase;
	letter-spacing: 2.3px;
	line-height: 25px;
}
#mast-text {
	margin-top: 20px;
}
#mast-text p {
	text-align: center;
	font-family: 'Conqueror Sans';
	color: #bbbbbb;
	font-size: 1.125rem;
}
@media only screen and (min-width: 40.063em) {
	#mast-text h3 {
		text-align: right;
		font-size: 24px;
		font-family: Open Sans;
		font-weight: 100;
		text-transform: uppercase;
		letter-spacing: 1.3px;
		line-height: 40px;
	}
	#mast-text {
		margin-top: 11%;
	}
	#mast-text p {
		text-align: right;
		font-size: 1.75em;
		font-size: 'Conqueror Sans';
	}
}
@media only screen and (min-width: 64.063em) {
	#video {
		margin-right: 20px;
		margin-top: 48px;
		margin-bottom: 25px;
	}
	#mast-text h3 {
		font-size: 38px;
		letter-spacing: 2.3px;
	}
	#mast-text p {
		font-size: 2.3em;
	}
	#mast-text {
		margin-top: 14%;
	}
}

/* About Janux
----------------------------------------- */

#about-janux {
	background-color: #fff;
	padding-left: 0.938rem;
	padding-right: 0.938rem;
	padding-top: 17px;
}
#about-janux p {
	font-family: Open Sans;
	font-weight: 100;
	color: #494949;
	line-height: 175%;
	margin-bottom: 2.125rem;
}
#about-janux h2 {
	font-family: Open Sans;
	font-weight: 100;
	line-height: 135%;
	color: #494949;
	font-size: 32px;
	margin-top: 20px;
}

/* Medium Screens and Up */

@media only screen and (min-width: 40.063em) {
	#about-janux {
		padding-left: 3em;
	}
}

/* Feature
----------------------------------------- */

#feature {
	background-color: #f0ede5;
	overflow: hidden;
}
#feature a {
	text-decoration: none;
}
#feature .course {
	padding-left: 15px;
	padding-right: 15px;
	border: solid 1px #e6e2d6;
}
#feature .meta {
	padding-top: 1.75em;
	padding-left: 0;
	padding-right: 0;
}
#feature .meta span {
	color: #962022;
	text-transform: uppercase;
	font-weight: 600;
	line-height: 140%;
	font-size: 0.625rem;
}
#feature .meta h4 {
	font-size: 1.78em;
	line-height: 1.1em;
	text-transform: uppercase;
	font-weight: 600;
	font-family: 'Open Sans Condensed', Arial, Helvetica, sans-serif;
	margin-bottom: 0.76em;
	color: #494949;
	margin-top: 0.4em;
}
#feature .meta p {
	font-family: Open Sans;
	font-weight: 100;
	color: #494949;
	font-size: 0.85rem;
	line-height: 200%;
}

/* Mobile Screens Only */

@media only screen and (max-width: 40em) {
	.feature img {
		padding-top: 1.666em;
	}
}

/* Medium Screens and Up */

@media only screen and (min-width: 40.063em) {
	#feature .course img {
		float: left;
	}
	#feature .meta {
		padding-left: 0.9375rem;
		padding-right: 0.9375rem;
	}
}

/* Large Screens */

@media only screen and (min-width: 64.063em) {
	#feature .course {
		padding: 3em 0 2.9em 3em;
		overflow: hidden;
	}
}

/* Enrollment Options
----------------------------------------- */

.enrollment-options {
	background-color: #f5f4ef;
}
.enrollment-options .option {
	padding-top: 1em;
	text-align: center;
	padding-bottom: 1em;
}
.enrollment-options .option {
	box-shadow: inset 0 -1px 0 #e6e2d6;
}
.option .price {
	text-align: center;
	font-size: 2.25rem;
	padding-top: 0.3em;
	font-family: Open Sans;
	font-weight: 600;
	color: #358bc1;
	line-height: 80%;
}
.option .price .old {
	color: #B8B8B8;
	text-decoration: line-through;
	font-size: 1.5rem;
}
.option h5 {
	color: #786f56;
	font-size: 0.875rem;
	font-family: Open Sans Condensed;
	text-align: center;
	font-weight: 700;
	padding-top: .6em;
}

/* Large Screens */

@media only screen and (min-width: 64.063em) {
	.enrollment-options .option {
		padding-bottom: 2.1em;
	}
}

/* Course Content
------------------------------------- */

.courseContent {
	background-color: #f3f3f3;
}
.courseContent h1 {
	color: #494949;
	margin-bottom: 0.5em;
	font: normal 300 1.75rem 'Open Sans', Arial, Helvetica, sans-serif;
	margin-right: -1em;
	margin-left: 0.9375rem;
}
a.button.tabBtn {
    box-shadow: inset 0px -2px 0 -1px #d6d6d6;
}
@media only screen and (min-width: 40.063em) {
	.courseContent h1 {
		margin-left: 1.286em;
	}
}
/* Large Up */
@media only screen and (min-width: 64.063em) {
	.courseContent {
		padding-bottom: 4em;
	}
}
/* Tech
------------------------------------- */

#tech {
	background-color: white;
	padding-bottom: 1.666em;
	padding-top: 3.333em;
	padding-left: 1.666em;
}
#tech h1 {
	color: #494949;
	margin-bottom: 0.5em;
	margin-top: 0px;
	font: normal 300 3em 'Open Sans', Arial, Helvetica, sans-serif;
}
#tech a.ou-btn1 {
	background-color: #2580b2;
	color: white;
	padding: 10px 20px;
	border-radius: 4px;
	margin-left: -4px;
}
#tech ul {
	list-style-type: none;
	margin-left: 0px;
}
#tech ul li {
	padding-bottom: 1em;
	font-family: Open Sans;
	font-weight: 100;
}
@media only screen and (min-width: 64.063em) {
	#tech {
		padding-left: 3em;
	}
}
/* About Page
------------------------------------- */

#about_content {
    background-color: white;
}

#about h3 {
    color: #494949;
    padding-top: 1em;
    font: normal 300 2em 'Open Sans', Arial, Helvetica, sans-serif;
	font-size: 28px;
}

#about p {
    font-size: 1.166em;
    font-weight: normal;
    line-height: 2.33em;
    color: #494949;
}

#about {
    font: normal normal 14px/28px 'Open Sans';
}
#about ul {
    padding-bottom: 1.875em;
}

#about ul li{
	font-family: Open Sans;
}

#about p.nobottom {
    padding-bottom: 0;
    margin-bottom: 0;
}
#about h5 {
    font-size: 14px;
    font-family: Open Sans;
    font-weight: 600;
}
#about h5 + p {
    padding-top: 0;
}

#about p {
    font-size: 14px;
    font-family: Open Sans;
    line-height: 2em;
}
.faq_content {
    background-color: white;
    padding-left: 0.938rem;
    padding-right: 0.938rem;
}

.faq_content p {
	padding: 1em 0 0.25em;
}
@media only screen and (min-width: 40.063em) {
	.faq_content, #about_content {
	    padding-left: 3em;
		padding-right: 3em;
	}
}
/* ... */

